# stamper

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.envs/: .env  .env.example
apps/users/api/: views.py
apps/users/migrations/: 0001_initial.py
compose/django/: Dockerfile  start
config/settings/: common.py  local.py
requirements/: base.txt
