[tool.poetry]
name = "stamper"
version = "0.1.0"
description = ""
authors = ["Kamil Krakowski"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
django-environ = "0.4.5"
djangorestframework = "3.12.1"
django-model-utils = "4.0.0"
django_extensions = "3.0.9"
Werkzeug = "1.0.1"
psycopg2-binary = "2.8.6"
